# gnudos-mirror

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  keybindings
doc/corelib/: Makefile.am  Makefile.in  hello_gnudos.c
doc/mino/: Makefile.am  Makefile.in  README
doc/prime/: Makefile.am  Makefile.in  README
info/: Makefile.am  Makefile.in  gnudos.info  prime.info
man/: Makefile.am  Makefile.in
man/man1/: gnudos.1  mino.1  prime.1
src/corelib/: Makefile.am  Makefile.in  dialogs.c  dialogs.h  kbd.c  kbd.h  screen.c  screen.h  ukbd.c  ukbd.h
src/mino/: Makefile.am  Makefile.in  defs.h  dir.c  edit.c  edit.h  file.c  file.h  help.c  help.h  init.c  kbd.c  kbd.h  linestruct.c  main.c  menu.c  opensave.c  options.c  options.h  screen.c  ukbd.c  ukbd.h
src/mino/modules/: module_asm.c  module_bas.c  module_c.c  module_cpp.c  module_f77.c  module_html.c  module_js.c  module_pas.c  module_perl.c  module_py.c  module_sh.c  module_texi.c  modules.c  modules.h
src/prime/: Makefile.am  Makefile.in  args.c  cutcopy.c  cutcopy.h  defs.h  dialogs.c  dialogs.h  dirstruct.c  dirstruct.h  edit.c  edit.h  file.c  file.h  find.c  find.h  help.c  help.h  init.c  main.c  menu.c  options.c  options.h  properties.c  screen.h
