# 
#    Copyright 2013, 2014 2015, 2016, 2017, 2018, 2024 (c)
#    Mohammed Isam Mohammed [mohammed_isam1984@yahoo.com]
# 
#    file: Makefile.am
#    This file is part of GnuDOS.
#
#    GnuDOS is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    GnuDOS is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with GnuDOS.  If not, see <http://www.gnu.org/licenses/>.
#    

AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = -I m4
#SUBDIRS = modules
#AM_CPPFLAGS = -I$(srcdir)/modules
bin_PROGRAMS = mino
mino_SOURCES = main.c defs.h dialogs.h edit.h file.h help.h kbd.h options.h screen.h ukbd.h dialogs.c dir.c edit.c file.c help.c init.c kbd.c linestruct.c menu.c opensave.c options.c screen.c ukbd.c modules/modules.c modules/modules.h modules/module_asm.c modules/module_bas.c modules/module_c.c modules/module_cpp.c modules/module_f77.c modules/module_html.c modules/module_js.c modules/module_pas.c modules/module_perl.c modules/module_py.c modules/module_sh.c modules/module_texi.c
