# 
#    Copyright 2013, 2014 2015, 2016, 2017, 2018, 2024 (c)
#    Mohammed Isam Mohammed [mohammed_isam1984@yahoo.com]
# 
#    file: Makefile.am
#    This file is part of GnuDOS.
#
#    GnuDOS is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    GnuDOS is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with GnuDOS.  If not, see <http://www.gnu.org/licenses/>.
#    

#AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = -I m4
bin_PROGRAMS = prime
prime_SOURCES = main.c args.c options.c options.h cutcopy.h defs.h edit.h find.h properties.c cutcopy.c edit.c file.c find.c menu.c dialogs.c kbd.c ukbd.c screen.c dialogs.h kbd.h screen.h ukbd.h dirstruct.c dirstruct.h file.h help.c help.h init.c
prime_CFLAGS = -Wall -Wextra -pedantic
